Subiendo avances de cambios hechos por el tema de las promociones